<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EventAddActivity">

    <TextView
            android:text="@string/event_title"
            android:layout_width="84dp"
            android:layout_height="26dp"
            android:id="@+id/textView"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/inputTextTitle"
            android:hint="@string/text_title"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.505"
            android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="107dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/inputDescription"
            android:singleLine="false" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/hint_description" android:autofillHints=""/>
    <TextView
            android:text="@string/text_description"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:textSize="18sp" android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/inputTextTitle"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCancelRegistrationSingle"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/inputDescription" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.392" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_cancel"/>
    <Button
            android:text="@string/text_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCompleteRegistrationSingle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/inputDescription" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.615"
            android:layout_marginBottom="48dp"/>
</android.support.constraint.ConstraintLayout>